[package]
name = "brainfork_server"
version = "0.1.0"
authors = ["Sam Rankin <sam.rankin@me.com>"]

[dependencies]
# forkengine = { path = "../forkengine" }
forkengine = { git = "https://github.com/samrankin1/forkengine.git" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
