[package]
name = "brainfork_server"
version = "0.1.0"
authors = ["Sam Rankin <sam.rankin@me.com>"]

[dependencies]
# forkengine = { path = "../forkengine" }
forkengine = { git = "https://github.com/samrankin1/forkengine.git" }
lazy_static = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# rocket = { version = "0.3", features = ["tls"] }
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
syncbox = "0.2"
r2d2 = "0.7"
r2d2_sqlite = "0.2"
rusqlite = "0.12"
uuid = { version = "0.4", features = ["v4"] }
